# timetable-exporter

./: .gitignore  README.md  pyproject.toml
data/: README.md
data/presets/: filters.template.json  mapping.template.json  sample.filters.json  sample.mapping.json  week_view.template.json
tests/: test_user_extensions.py  test_week_view_footer.py
timetable_exporter/: argparse_utils.py  cli.py  ical_generator.py  week_view_exporter.py
timetable_exporter/user_extensions/: __init__.py  datetime.py  timetable_accessor.py
